--- a/css/style.css
+++ b/css/style.css
@@ -147,13 +147,16 @@ header .search-bar-container label:hover{
 
 
 #menu-bar{
-  color:#fff;
-  border:.1rem solid #fff;
+  color:var(--blue);
+  border:.1rem solid var(--blue);
   border-radius: .5rem;
   font-size: 3rem;
   padding:.5rem 1.2rem;
   cursor: pointer;
   display: none;
+  text-align: center;
+  margin-left: 5rem;
+  width: 5rem;
 }
 
 .home{
