--- a/css/style.css
+++ b/css/style.css
@@ -69,6 +69,7 @@ section{
 
 header{
   position: fixed;
+  width: 100vw;
   top:0; left: 0; right:0;
   background:rgba(255, 255, 255,0.8);
   z-index: 1000;
@@ -97,56 +98,8 @@ header .navbar a:hover{
   font-size: 2.1rem;
 }
 
-header .icons i{
-  font-size: 2.5rem;
-  color:#fff;
-  cursor: pointer;
-  margin-right: 2rem;
-}
-
-header .icons i:hover{
-  color:var(--blue);
-}
-
-header .search-bar-container{
-  position: absolute;
-  top:100%; left: 0; right:0;
-  padding:1.5rem 2rem;
-  background:#333;
-  border-top: .1rem solid rgba(255,255,255,.2);
-  display: flex;
-  align-items: center;
-  z-index: 1001;
-  clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
-}
-
-header .search-bar-container.active{
-  clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
-}
-
-header .search-bar-container #search-bar{
-  width:100%;
-  padding:1rem;
-  text-transform: none;
-  color:#333;
-  font-size: 1.7rem;
-  border-radius: .5rem;
-}
-
-header .search-bar-container label{
-  color:#fff;
-  cursor: pointer;
-  font-size: 3rem;
-  margin-left: 1.5rem;
-}
-
-header .search-bar-container label:hover{
-  color:var(--blue);
-}
-
-
-
 #menu-bar{
+  background:rgba(255, 255, 255,0.8);
   color:var(--blue);
   border:.1rem solid var(--blue);
   border-radius: .5rem;
@@ -155,8 +108,8 @@ header .search-bar-container label:hover{
   cursor: pointer;
   display: none;
   text-align: center;
-  margin-left: 5rem;
   width: 5rem;
+  margin-right: 30rem;
 }
 
 .home{
@@ -456,52 +409,31 @@ header .search-bar-container label:hover{
 }
 
 .contact .row .contact{
-  flex:1 1 35rem;
-  padding:2rem;
+  flex:1 1 5rem;
+  padding:1rem;
   box-shadow: 0 1rem 2rem rgba(0,0,0,.1);
   border-radius: .5rem;
+
 }
 
 .contact .row div .inputBox{
   display: flex;
-  flex-wrap: wrap;
   justify-content: center;
-  font-size: 2rem;
+  font-size: 1.5rem;
 }
 .contact .row div .inputBox i{
-  height: 5rem;
+  height: 7rem;
   line-height: 3.5rem;
-  width: 2rem;
+  width: 5rem;
+  text-align: center;
   vertical-align: middle;
 }
 .contact .row div .inputBox span{
   margin-left: 2rem;
-  height: 7rem;
   line-height: 3.5rem;
-  width: 55rem;
-  overflow: visible;
-  text-overflow: ellipsis;
+  height: 7rem;
+  width: 35rem;
   vertical-align: middle;
-}
-
-.contact .row div .inputBox input, .contact .row div textarea{
-  width:49%;
-  margin:1rem 0;
-  padding:1rem;
-  font-size: 1.7rem;
-  color:#333;
-  background:#f7f7f7;
-  text-transform: none;
-}
-
-.contact .row div textarea{
-  height: 15rem;
-  resize: none;
-  width:100%;
-}
-
-.brand-container{
-  text-align: center;
 }
 
 .footer{
@@ -517,6 +449,7 @@ header .search-bar-container label:hover{
 .footer .box-container .box{
   padding:1rem 0;
   flex:1 1 25rem;
+  text-align: center;
 }
 
 .footer .box-container .box h3{
@@ -529,6 +462,8 @@ header .search-bar-container label:hover{
   font-size: 1.5rem;
   padding:.7rem 0;
   color:#eee;
+  text-align: center;
+
 }
 
 .footer .box-container .box a{
